10/05/11 - added icon for ajax editable fields in AA admin interface
(honzam)
08/15/11 - fixed {switch} - broken in last commit 08/14/11
(honzam)
08/14/11 - new {xpath:<XML/HTML string>:<xpath>[:<attribute>[:<delimiter>]]}
(honzam) - returns part of the XML or HTML <string > based on <xpath> query
           - Use as:
             {xpath:{include:http#://example.cz/list.html}://[@id="pict-width"]}
             {xpath:{include:http#://example.cz/list.html}://img[@id="bigpict"]:width}
         - new {facebook:<url>} - prints facebook "I like" button for the url
         - new {if:<condition>:<operator>:<test-value1>:<output1>:<test-value2>:<output2>:<default>}
           - used as:
             {if:{_#IMGCOUNT}:>:10:big:6:medium:small}
           - condition expressions similar to {ifeq:...
           - operators are: >, >=, gt, ge, =, ==, eq, <, <=, lt, le, <>, !=
         - new experimental {changepwd:<reader_slice_id>}
           - will manage all tasks needed for change of pwd in site module
           - just put it in the code
           - not finished - needs the config options for the printed messages
         - more clear setting, how the data fot the field is stored - if in text
           or number column - see Admin -> Fields -> Edit
         - new "remove duplicates" optimalization for the items - removes
           duplicate values in the field - see AA -> Optimize
         - mailman Readers synchronization moved to selparate class
           and optimized to include it only when needed
         - hit for current page in site module - deffered after the page
           is sent to user
         - better modularization of permission system
         - new experimental debug possibility - use PHP Console for chrome
           - example.org/en/home?debug=c
         - clenup, removed unused functions and speed optimalization
06/10/11 - fixes for PHP 5.3 - now tested on production server for one week